# FASTAPI-BLOG

./: pyproject.toml
fastapi_blog/: main.py
fastapi_blog/database/: db_post.py  models.py
fastapi_blog/routers/: post.py  schemas.py
